--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,19 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+#Dependencies
 node_modules
+
+# Build output
 dist
 dist-ssr
+
+# Local environment variables
 *.local
+.env
+
+# Vite cache
+.vite/
 
 # Editor directories and files
 .vscode/*
