--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "firebase": "^11.7.1",
+    "framer-motion": "^12.11.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
